<resources>
    <string name="app_name">Nhom6_6</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="shipper">Shipper</string>
    <string name="thukho">Thukho</string>
    <string name="tdn">Nhập tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="dangki">Đăng kí</string>
    <string name="donhang">Các đơn hàng cần giao</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="dsdonhang">Danh sách đơn hàng</string>
    <string name="tenshippper">Danh sách các shipper: </string>
    <string-array name="danhsachshipper">
        <item>Trần Thanh Nhàn</item>
        <item>Võ Thành Tài</item>
        <item>Trần Thị Thục Trinh</item>
        <item>Bùi Tuyết Băng</item>
    </string-array>
    <string name="Ten">Nhập tên </string>
    <string name="xtmatkhau">Xác thực mật khẩu </string>
    <string name="sdt">Nhập số điện thoại </string>
    <string name="huy">Hủy </string>
    <string name="title_activity_thu_kho_main">ThuKhoMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_shipper_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>