<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonhangThukho"
    android:orientation="vertical">
    <TextView
        style="@style/Tieude"
        android:text="@string/dsdonhang"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Textview"
            android:text="@string/tenshippper" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/danhsachshipper" />



    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/lstdanhsachdonhangthukho"></ListView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myRecyclerView">
    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:layout_marginTop="10dp"
        style="@style/Button"
        android:id="@+id/dangxuat"
        android:text="@string/dangxuat"/>


</LinearLayout>